5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4347/executions/1811_2562.log
== SUBMITION (2019-06-11 22:25:38) 
-- CODE:
from numpy import*
vet=array(eval(input("primeiro")))
h=0
while (size(vet)>1):
	npar=0
	for elemento in vet:
		if (elemento 2==0):
			npar=npar+1
   print (npar)
	print (size(vet)-npar)
	print (size(vet))
	vet=array(eval(input("proximo")))

-- EXECUTION TIME:
0.749452
-- ERROR:
  File "/home/codebench/codes/1811/2562/main.py", line 7
    if (elemento 2==0):
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 22:42:19) 
-- CODE:
from numpy import*
vet=array(eval(input("primeiro")))
h=0
while (size(vet)>1):
	npar=0
	for elemento in vet:
		if (elemento % 2==0):
			npar=npar+1
   print (npar)
	print (size(vet)-npar)
	print (size(vet))
	vet=array(eval(input("proximo")))

-- EXECUTION TIME:
0.880469
-- ERROR:
  File "/home/codebench/codes/1811/2562/main.py", line 9
    print (npar)
               ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 22:42:22) 
-- CODE:
from numpy import*
vet=array(eval(input("primeiro")))
h=0
while (size(vet)>1):
	npar=0
	for elemento in vet:
		if (elemento % 2==0):
			npar=npar+1
   print (npar)
	print (size(vet)-npar)
	print (size(vet))
	vet=array(eval(input("proximo")))

-- EXECUTION TIME:
0.817834
-- ERROR:
  File "/home/codebench/codes/1811/2562/main.py", line 9
    print (npar)
               ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 22:42:30) 
-- CODE:
from numpy import*
vet=array(eval(input("primeiro")))
h=0
while (size(vet)>1):
	npar=0
	for elemento in vet:
		if (elemento %2==0):
			npar=npar+1
   print (npar)
	print (size(vet)-npar)
	print (size(vet))
	vet=array(eval(input("proximo")))

-- ERROR:
File "XXXX", line 9
    print (npar)
               ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 22:44:54) 
-- CODE:
from numpy import*
vet=array(eval(input("primeiro vetor: ")))
h=0
while (size(vet)>1):
	npar=0
	for elemento in vet:
		if (elemento % 2==0):
			npar=npar+1
   print (npar)
	print (size(vet)-npar)
	print (size(vet))
	vet=array(eval(input("proximo vetor: ")))

-- EXECUTION TIME:
0.623206
-- ERROR:
  File "/home/codebench/codes/1811/2562/main.py", line 9
    print (npar)
               ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 22:44:59) 
-- CODE:
from numpy import*
vet=array(eval(input("primeiro vetor: ")))
h=0
while (size(vet)>1):
	npar=0
	for elemento in vet:
		if (elemento % 2==0):
			npar=npar+1
   print (npar)
	print (size(vet)-npar)
	print (size(vet))
	vet=array(eval(input("proximo vetor: ")))

-- ERROR:
File "XXXX", line 9
    print (npar)
               ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 22:45:08) 
-- CODE:
from numpy import*
vet=array(eval(input("primeiro vetor: ")))
h=0
while (size(vet)>1):
	npar=0
	for elemento in vet:
		if (elemento % 2==0):
			npar=npar+1
   
	print (size(vet)-npar)
	print (size(vet))
	vet=array(eval(input("proximo vetor: ")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 22:45:16) 
-- CODE:
from numpy import*
vet=array(eval(input("primeiro vetor: ")))
h=0
while (size(vet)>1):
	npar=0
	for elemento in vet:
		if (elemento % 2==0):
			npar=npar+1
   
	print (size(vet)-npar)
	print (size(vet))
	vet=array(eval(input("proximo vetor: ")))

-- EXECUTION TIME:
1.0253
-- TEST CASE 1:
---- input:
[-2,-3,-5,-6,-7,-8,-9,-10]
[1,3,5,7,9,11,13,15,17,19,21]
[2,6,10,14,18,22]
[1]
---- correct output:
4
4
8
0
11
11
6
0
6

---- user output:
4
8
11
11
0
6
-- TEST CASE 2:
---- input:
[1,1,1,1,1,1,1,1,1,1,1,1,0]
[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1]
[2,8,16,32,64,128,256,512,1024,2048]
[1]
---- correct output:
1
12
13
16
1
17
10
0
10

---- user output:
12
13
1
17
0
10
-- TEST CASE 3:
---- input:
[-1,1,-2,2,-3,3,-4,4,-5,5,-6,6,-7,7,-8,8,-9,9]
[-200,100,-201,101]
[1]
---- correct output:
8
10
18
2
2
4

---- user output:
10
18
2
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 22:45:20) 
-- CODE:
from numpy import*
vet=array(eval(input("primeiro vetor: ")))
h=0
while (size(vet)>1):
	npar=0
	for elemento in vet:
		if (elemento % 2==0):
			npar=npar+1
   
	print (size(vet)-npar)
	print (size(vet))
	vet=array(eval(input("proximo vetor: ")))

-- EXECUTION TIME:
1.14021
-- TEST CASE 1:
---- input:
[-2,-3,-5,-6,-7,-8,-9,-10]
[1,3,5,7,9,11,13,15,17,19,21]
[2,6,10,14,18,22]
[1]
---- correct output:
4
4
8
0
11
11
6
0
6

---- user output:
4
8
11
11
0
6
-- TEST CASE 2:
---- input:
[1,1,1,1,1,1,1,1,1,1,1,1,0]
[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1]
[2,8,16,32,64,128,256,512,1024,2048]
[1]
---- correct output:
1
12
13
16
1
17
10
0
10

---- user output:
12
13
1
17
0
10
-- TEST CASE 3:
---- input:
[-1,1,-2,2,-3,3,-4,4,-5,5,-6,6,-7,7,-8,8,-9,9]
[-200,100,-201,101]
[1]
---- correct output:
8
10
18
2
2
4

---- user output:
10
18
2
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 22:45:29) 
-- CODE:
from numpy import*
vet=array(eval(input("primeiro vetor: ")))
h=0
while (size(vet)>1):
	npar=0
	for elemento in vet:
		if (elemento % 2==0):
			npar=npar+1
   print (npar)
	print (size(vet)-npar)
	print (size(vet))
	vet=array(eval(input("proximo vetor: ")))

-- EXECUTION TIME:
0.587257
-- ERROR:
  File "/home/codebench/codes/1811/2562/main.py", line 9
    print (npar)
               ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 23:52:42) 
-- CODE:
from numpy import*
vet=array(eval(input("primeiro vetor: ")))
h=0
while (size(vet)>1):
	npar=0
	for elemento in vet:
		if (elemento % 2==0):
			npar=npar+1
   print (npar)
	print (size(vet)-npar)
	print (size(vet))
	vet=array(eval(input("proximo vetor: ")))

-- EXECUTION TIME:
0.874571
-- ERROR:
  File "/home/codebench/codes/1811/2562/main.py", line 9
    print (npar)
               ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 01:10:20) 
-- CODE:
from numpy import*
vet=array(eval(input("primeiro vetor: ")))
h=0
while (size(vet)>1):
	npar=0
	for elemento in vet:
		if (elemento % 2==0):
			npar=npar+1
   print (npar)
	print (size(vet)-npar)
	print (size(vet))
	vet=array(eval(input("proximo vetor: ")))

-- EXECUTION TIME:
0.859454
-- ERROR:
  File "/home/codebench/codes/1811/2562/main.py", line 9
    print (npar)
               ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
